--- a/custom_components/yale_doorman_via_smarthub/translations/sv.json
+++ b/custom_components/yale_doorman_via_smarthub/translations/sv.json
@@ -4,7 +4,7 @@
         "step": {
             "user": {
                 "title": "Yale Doorman via Smart Hub",
-                "description": "Ange inloggningsinformationen till din Yale Smart Hub. Om vill kunna automatisera uppl\u00e5sning, ange också PIN-koden.",
+                "description": "Ange inloggningsinformationen till din Yale Smart Hub. Om vill kunna automatisera uppl\u00e5sning, ange ocks\u00e5 PIN-koden.",
                 "data": {
                     "username": "Anv\u00e4ndarnamn",
                     "password": "L\u00f6senord",
@@ -19,7 +19,7 @@
         "step": {
             "user": {
                 "title": "Yale Doorman via Smart Hub",
-                "description": "Ange inloggningsinformationen till din Yale Smart Hub. Om vill kunna automatisera uppl\u00e5sning, ange också PIN-koden.",
+                "description": "Ange inloggningsinformationen till din Yale Smart Hub. Om vill kunna automatisera uppl\u00e5sning, ange ocks\u00e5 PIN-koden.",
                 "data": {
                     "username": "Anv\u00e4ndarnamn",
                     "password": "L\u00f6senord",
