--- a/custom_components/yale_doorman_via_smarthub/translations/en.json
+++ b/custom_components/yale_doorman_via_smarthub/translations/en.json
@@ -29,5 +29,22 @@
                 }
             }
         }
-    }
+    }, "responses": {
+            "event_type": {
+                "1301": "Yale hub - no powersupply",
+                "1302": "Yale Hub - battery low",
+                "1602": "Periodical test",
+                "1801": "Unlocked from inside",
+                "1802": "Unlocked from outside, token or keypad",
+                "1803": "Unlocked by app",
+                "1807": "Auto-relocked",
+                "1812": "Lock added to the system",
+                "1815": "Failed to lock",
+                "1816": "Locked after a failed lock",
+                "3801": "Locked from inside",
+                "3802": "Locked with star button",
+                "3803": "Locked with app",
+                "3812": "Lock removed from the system"
+            }
+        }
 }
